--- a/top.html
+++ b/top.html
@@ -10,7 +10,7 @@
 
    <!-- PC用ヘッダー -->
   <header id="top">
-    <a class="header-class" href="#main-section">ITO GAKUTO</a>
+    <a class="header-class" href="#main-section"> ABOUT ITO GAKUTO</a>
     <nav id="nav-pc">
       <a href="#main-works">WORKS</a>
       <a href="#main-skill">SKILL</a>
